syntax = "proto3";

package proto.keeper.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/Sadere/gophkeeper/pkg/keeper/v1";

message LoginRequestV1 {
  string login = 1 [
    (buf.validate.field).string.min_len = 5,
    (buf.validate.field).string.max_len = 100
  ];
  string password = 2 [
    (buf.validate.field).string.min_len = 6,
    (buf.validate.field).string.max_len = 20
  ];
}

message LoginResponseV1 {
  string access_token = 1;
}

message RegisterRequestV1 {
  string login = 1 [
    (buf.validate.field).string.min_len = 5,
    (buf.validate.field).string.max_len = 100
  ];
  string password = 2 [
    (buf.validate.field).string.min_len = 6,
    (buf.validate.field).string.max_len = 20
  ];
}

message RegisterResponseV1 {
  string access_token = 1;
}

service AuthService {
  rpc LoginV1(LoginRequestV1) returns (LoginResponseV1);
  rpc RegisterV1(RegisterRequestV1) returns (RegisterResponseV1);
}
